fix drawer  on mobile

--- a/assets/base.css
+++ b/assets/base.css
@@ -12,6 +12,7 @@ body {
   font-variation-settings: 'slnt' 0;
   font-family: 'Assistant', 'Heebo', Arial, sans-serif;
   text-align: right;
+  overflow-x: hidden;
 }
 
 :root {
@@ -1241,7 +1242,7 @@ results-list[initialized] {
     max-width: 100%;
     max-height: 100%;
     height: 100dvh;
-    width: 100dvw;
+    width: 100%;
     padding: var(--padding-md);
   }
 }
